# nexa

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SECURITY.md
bindings/c/: nexa_c_api.cpp
bindings/jni/: jni_bridge.cpp
bindings/jni/java/io/nexa/: Nexa.java  NexaIsolate.java  NexaPool.java  NexaPoolConfig.java  NexaResult.java
core/: engine.h  nexa.cpp  nexa.h
core/bridge/: direct_buffer.cpp  module_registry.cpp
core/ipc/: ipc_protocol.h  nexa_child.cpp
core/pool/: isolate_handle.cpp  isolate_pool.cpp  isolate_pool.h  process_isolate.cpp  process_isolate.h
core/stub/: stub_engine.cpp  stub_engine.h
core/v8/: v8_engine.cpp  v8_engine.h
examples/java/: README.md  pom.xml
examples/java/src/main/java/io/nexa/examples/: BasicExamples.java  LoadAndCallExample.java  ModuleInjectionExample.java
examples/java/src/main/java/io/nexa/examples/spring/: SpringBootExample.java
java-api/: pom.xml
tests/: CMakeLists.txt  test_ipc.cpp  test_pool.cpp  test_runner.cpp
tools/: nexa_snapshot.cpp
